2011-05-30  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* xmlconfig/defaults.xml: new view: "embedded" for external GUI
	systems

2011-05-26  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/Collector.pm (beforeRun): Collector
	initialization is done with an exclusive lock on
	collector_lock.db. This avoids the concurrent config slurping at
	collector startup and minimizes the I/O delays.

2011-05-24  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/Renderer/HTML.pm (makeURL): All navigation is now
	done with persistent URLs. Tokens are removed from GUI wnenever
	possible.

2011-05-23  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover/Patton.pm: new discovery module for
	Patton devices

	* perllib/Torrus/DevDiscover/NexComm.pm: new discovery module for
	NexComm xDSL gateways

	* perllib/Torrus/DevDiscover/Actelis.pm: new discovery module for
	Actelis xDSL gateways

	* perllib/Torrus/DevDiscover/Thomson_xDSL.pm: new discovery module
	for Technicolor/Thomson xDSL gateways

2011-05-20  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover.pm: removed uptime from the legend,
	as it was always confusing

	* templates/iframe-rrd.html: new RRD leaf view: "iframe-rrd" for
	portal integration

	* perllib/Torrus/DevDiscover/CCOM.pm: new discovery module for
	C-COM CAPSPAN devices
	

2011-05-15  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* Makefile.am (dist-hook): DIST_REVISION now displays Git branch
	information

	* bin/torrus.fcgi.in: Let FCGI handler re-spawn every 5000
	requests or 48 hours for better DB stability

2011-05-10  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* BDB cursor destructors are explicitly controlled for better
	stability

2011-05-01  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover.pm: SNMP reachability stats are